--- a/default.hbs
+++ b/default.hbs
@@ -14,8 +14,10 @@
     <!-- Use Prism for syntax highlighting -->
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/plugins/line-numbers/prism-line-numbers.min.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs/plugins/prism-line-numbers.min.css">
 
     <link rel="stylesheet" href="{{asset "built/screen.css"}}">
 
