Add line-breaks and word-wrap to PrismJS

--- a/post.hbs
+++ b/post.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-<main class="site-main">
+<main class="site-main line-numbers">
 
     {{#post}}
         {{> "content" width="wide"}}
