Attempt to fix homepage with new routing

--- a/index.hbs
+++ b/index.hbs
@@ -1,23 +1,26 @@
 {{!< default}}
-
 <main class="site-main">
-
     <header class="feed-header gh-canvas">
-        {{#if @custom.feed_title}}
+        {{#if tag}}
+            <div class="feed-header-wrapper">
+                <h2 class="feed-header-title">{{tag.name}}</h2>
+                {{#if tag.description}}
+                    <div class="feed-header-description">{{tag.description}}</div>
+                {{/if}}
+            </div>
+        {{else if @custom.feed_title}}
             <div class="feed-header-wrapper">
                 <h2 class="feed-header-title">{{@custom.feed_title}}</h2>
             </div>
         {{/if}}
     </header>
-
     <div class="post-feed{{#match @custom.feed_layout "!=" "Minimal"}} expanded{{/match}}{{#match @custom.feed_layout "Right thumbnail"}} right-thumbnail{{/match}}{{#match @custom.feed_layout "Text-only"}} text-only{{/match}} gh-feed gh-canvas">
         {{#foreach posts}}
             {{> "loop"}}
         {{/foreach}}
     </div>
-
-    {{pagination}}
-
+    {{#if pagination}}
+        {{pagination}}
+    {{/if}}
 </main>
-
 {{#contentFor "body_class"}}{{#if @site.cover_image}} with-full-cover is-head-transparent{{/if}}{{#if @member}} logged-in{{/if}}{{/contentFor}}
