attempt homepage fix

--- a/index.hbs
+++ b/index.hbs
@@ -12,6 +12,10 @@
             <div class="feed-header-wrapper">
                 <h2 class="feed-header-title">{{@custom.feed_title}}</h2>
             </div>
+        {{else}}
+            <div class="feed-header-wrapper">
+                <h2 class="feed-header-title">Latest Posts</h2>
+            </div>
         {{/if}}
     </header>
     <div class="post-feed{{#match @custom.feed_layout "!=" "Minimal"}} expanded{{/match}}{{#match @custom.feed_layout "Right thumbnail"}} right-thumbnail{{/match}}{{#match @custom.feed_layout "Text-only"}} text-only{{/match}} gh-feed gh-canvas">
