--- a/assets/css/blog/feed.css
+++ b/assets/css/blog/feed.css
@@ -220,7 +220,7 @@
     align-items: center;
 }
 
-.post-feed.expanded :is(.feed-length, .feed-comments)::before {
+.post-feed.expanded :is(.feed-length, .feed-comments, .feed-date)::before {
     padding: 0 0.7rem;
     font-family: serif;
     font-size: 1rem;
