Move scripts, header, & footer to partials

--- a/home.hbs
+++ b/home.hbs
@@ -2,7 +2,7 @@
 <main class="site-main">
     <header class="feed-header gh-canvas">
         <div class="feed-header-wrapper">
-            <h2 class="feed-header-title">Latest Posts</h2>
+            <h2 class="feed-header-title">What's New:</h2>
         </div>
     </header>
     <div class="post-feed expanded right-thumbnail gh-feed gh-canvas">
