--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -36,7 +36,7 @@
                 {{primary_tag.name}}
             </span>
             <time class="feed-date" datetime="{{date format="YYYY-MM-DD"}}">
-                {{date published_at format="DD MMM YYYY"}}
+                {{date published_at format="MMM DD, YYYY"}}
             </time>
             <div class="feed-visibility feed-visibility-{{visibility}}">
                 {{> "icons/star"}}
