--- a/index.hbs
+++ b/index.hbs
@@ -27,4 +27,4 @@
         {{pagination}}
     {{/if}}
 </main>
-{{#contentFor "body_class"}}{{#if @site.cover_image}} with-full-cover is-head-transparent{{/if}}{{#if @member}} logged-in{{/if}}{{/contentFor}}
+{{#contentFor "body_class"}}{{#if @site.cover_image}} with-full-cover {{/if}}{{#if @member}} logged-in{{/if}}{{/contentFor}}
