--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,23 +1,27 @@
 @import "@tryghost/shared-theme-assets/assets/css/v1/screen.css";
+
 @import "general/basics.css";
 @import "general/button.css";
 @import "general/form.css";
 @import "general/icons.css";
-@import "site/layout.css";
-@import "site/header.css";
+
 @import "site/cover.css";
-@import "blog/feed.css";
-@import "blog/featured.css";
-@import "blog/pagination.css";
-@import "blog/single.css";
+@import "site/header.css";
+@import "site/layout.css";
+
 @import "blog/author.css";
-@import "blog/share.css";
+@import "blog/featured.css";
+@import "blog/feed.css";
 @import "blog/navigation.css";
+@import "blog/pagination.css";
+@import "blog/prismjs.css";
 @import "blog/related.css";
+@import "blog/single.css";
+@import "blog/share.css";
+@import "blog/tag.css";
 @import "blog/taxonomy.css";
+
+@import "misc/animations.css";
+@import "misc/portal.css";
 @import "misc/tiny-slider.css";
 @import "misc/utils.css";
-@import "misc/portal.css";
-@import "misc/animations.css";
-
-@import "blog/prismjs.css";
