Add drop shadow on post images

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,6 +12,7 @@
 @import "blog/author.css";
 @import "blog/featured.css";
 @import "blog/feed.css";
+@import "blog/images.css";
 @import "blog/navigation.css";
 @import "blog/pagination.css";
 @import "blog/prismjs.css";
