--- a/partials/content.hbs
+++ b/partials/content.hbs
@@ -2,6 +2,9 @@
 
     {{#match @page.show_title_and_feature_image}}
         <header class="single-header gh-canvas">
+
+            <h1 class="single-title">{{title}}</h1>
+
             {{#is "post"}}
             <div class="single-meta">
                 <span class="single-meta-item single-meta-date">
@@ -17,29 +20,10 @@
                         <a class="post-tag post-tag-{{slug}}" href="{{url}}">{{name}}</a>
                     </span>
                 {{/primary_tag}}
+                <br>
+                <div class="author-name">{{authors}}</div>
             </div>
             {{/is}}
-
-            <h1 class="single-title">{{title}}</h1>
-
-            {{#if custom_excerpt}}
-                <div class="single-excerpt">
-                    {{custom_excerpt}}
-                </div>
-            {{/if}}
-
-            <div class="author-name" style="display: none;">{{authors}}</div>
-
-            {{#if feature_image}}
-            {{#unless no_image}}
-                <figure class="single-media kg-width-{{width}}">
-                    <img srcset="{{> "srcset"}}" sizes="(min-width: 1023px) 920px, calc(90vw)" src="{{img_url feature_image size="l"}}" alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}">
-                    {{#if feature_image_caption}}
-                        <figcaption>{{feature_image_caption}}</figcaption>
-                    {{/if}}
-                </figure>
-            {{/unless}}
-            {{/if}}
         </header>
     {{/match}}
 
