--- a/partials/content.hbs
+++ b/partials/content.hbs
@@ -32,7 +32,7 @@
                             {{/if}}
                         </div>
                         <div class="author-name">
-                            {{authors}}
+                            <a href="https://railsgrowth.com/about/">{{name}}</a>
                         </div>
                     {{/foreach}}
                 </div>
