Update footer flex

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2,6 +2,7 @@
 
 @import "general/basics.css";
 @import "general/button.css";
+@import "general/footer.css";
 @import "general/form.css";
 @import "general/icons.css";
 
