--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,14 +1,10 @@
-<footer class="gh-foot{{#unless @site.secondary_navigation}} no-menu{{/unless}} gh-outer">
+<footer class="gh-foot gh-outer">
     <div class="gh-foot-inner gh-inner">
-        <div class="gh-copyright">
+        <div>
             {{@site.title}} © {{date format="YYYY"}}
         </div>
-        <div class="gh-powered-by">
-            {{#if @site.secondary_navigation}}
-            <nav class="gh-foot-menu">
-                {{navigation type="secondary"}}
-            </nav>
-        {{/if}}
+        <div>
+            <a href="https://railsgrowth.com/contact/">Contact</a>
         </div>
     </div>
 </footer>
