Add gem to footer

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,7 +1,13 @@
 <footer class="gh-foot gh-outer">
     <div class="gh-foot-inner gh-inner">
         <div>
+            <img src="{{asset 'images/railsgrowth-gem.png'}}" style="height: 48px; width: 48px;" />
+        </div>
+        <div>
             {{@site.title}} © {{date format="YYYY"}}
+        </div>
+        <div>
+           •
         </div>
         <div>
             <a href="https://railsgrowth.com/contact/">Contact</a>
