Attempt to add back line-numbers

--- a/partials/content.hbs
+++ b/partials/content.hbs
@@ -1,4 +1,4 @@
-<article class="single {{post_class}}">
+<article class="single {{post_class}} line-numbers">
 
     {{#match @page.show_title_and_feature_image}}
         <header class="single-header gh-canvas">
