--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -3,11 +3,8 @@
         <div class="gh-head-brand">
             <div class="gh-head-brand-wrapper">
                 <a class="gh-head-logo" href="{{@site.url}}">
-                    {{#if @site.logo}}
-                        <img src="{{@site.logo}}" alt="{{@site.title}}">
-                    {{else}}
-                        {{@site.title}}
-                    {{/if}}
+                    <img src="{{asset 'images/railsgrowth-gem.png'}}"  class="gh-head-logo-image" />
+                    RailsGrowth
                 </a>
             </div>
             <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
