--- a/partials/head-scripts.hbs
+++ b/partials/head-scripts.hbs
@@ -16,3 +16,5 @@
 
 <!-- Use Fathom for analytics -->
 <script src="https://cdn.usefathom.com/script.js" data-site="CMTTXMHN" defer></script>
+
+<!-- Hi Felix! 👋 -->
